# chatBot

./: .env.prod  .gitignore  README.md  pyproject.toml
accounts/2645831652/: config.yml  device.json  session.token
accounts/2645831652/data/images/: LOG
accounts/2645831652/data/leveldb-v3/: 000013.ldb  000016.ldb  000018.ldb  LOG  MANIFEST-000015
accounts/2645831652/data/videos/: LOG
accounts/binary/: accounts.pkl
chatBot/: .gitignore  README.md  pyproject.toml
config/: naturel_gpt_config.yml
data/naturel_gpt/: naturel_gpt.pkl
